--- a/crates/unwrapped/Cargo.toml
+++ b/crates/unwrapped/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "unwrapped"
+description = """
+    The unwrapped crate
+"""
 version.workspace = true
 categories.workspace = true
 edition.workspace = true
