--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -20,6 +20,8 @@ jobs:
           token: ${{ secrets.RELEASE_PLZ_TOKEN }}
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+      - name: Setup mold
+        uses: rui314/setup-mold@v1
       - name: Run release-plz
         uses: release-plz/action@v0.5
         with:
@@ -46,6 +48,9 @@ jobs:
           token: ${{ secrets.RELEASE_PLZ_TOKEN }}
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+      - name: Setup mold
+        uses: rui314/setup-mold@v1
+
       - name: Run release-plz
         uses: release-plz/action@v0.5
         with:
