--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT OR Apache-2.0"
 publish = true
 readme = "README.md"
 repository = "https://github.com/stayhydated/unwrapped"
+rust-version = "1.88"
 version = "0.1.1"
 
 [workspace.dependencies]
