--- a/crates/unwrapped/Cargo.toml
+++ b/crates/unwrapped/Cargo.toml
@@ -3,12 +3,11 @@ name = "unwrapped"
 description = """
     The unwrapped crate
 """
+readme = "README.md"
 version.workspace = true
-categories.workspace = true
 edition.workspace = true
 license.workspace = true
 publish.workspace = true
-readme.workspace = true
 repository.workspace = true
 
 [dependencies]
