--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,5 @@
 version: 2
+
 updates:
   - package-ecosystem: "github-actions"
     directory: "/"
@@ -7,37 +8,56 @@ updates:
       day: "monday"
       time: "04:00"
       timezone: "America/New_York"
-    open-pull-requests-limit: 10
+
+    groups:
+      all-github-actions:
+        patterns:
+          - "*"
+
     commit-message:
       prefix: "chore"
       include: "scope"
+
     labels:
       - "ci/cd"
       - "github-actions"
+
     ignore:
       - dependency-name: "actions/checkout"
         update-types:
-          ["version-update:semver-minor", "version-update:semver-patch"]
+          - "version-update:semver-minor"
+          - "version-update:semver-patch"
+
     assignees:
       - "stayhydated"
 
   - package-ecosystem: "cargo"
     directory: "/"
+
     schedule:
       interval: "monthly"
       day: "monday"
       time: "04:00"
       timezone: "America/New_York"
-    open-pull-requests-limit: 10
+
+    groups:
+      all-cargo-majors:
+        patterns:
+          - "*"
+
     commit-message:
       prefix: "chore"
       include: "scope"
+
     labels:
       - "dependencies"
       - "rust"
+
     ignore:
       - dependency-name: "*"
         update-types:
-          ["version-update:semver-minor", "version-update:semver-patch"]
+          - "version-update:semver-minor"
+          - "version-update:semver-patch"
+
     assignees:
       - "stayhydated"
