rust-version.workspace = true

--- a/crates/unwrapped-derive/Cargo.toml
+++ b/crates/unwrapped-derive/Cargo.toml
@@ -4,11 +4,12 @@ description = """
     Derive library for unwrapped
 """
 readme = "README.md"
-version.workspace = true
 edition.workspace = true
 license.workspace = true
 publish.workspace = true
 repository.workspace = true
+rust-version.workspace = true
+version.workspace = true
 
 [lib]
 proc-macro = true
