--- a/crates/unwrapped-core/Cargo.toml
+++ b/crates/unwrapped-core/Cargo.toml
@@ -4,11 +4,12 @@ description = """
     Core library for unwrapped
 """
 readme = "README.md"
-version.workspace = true
 edition.workspace = true
 license.workspace = true
 publish.workspace = true
 repository.workspace = true
+rust-version.workspace = true
+version.workspace = true
 
 [dependencies]
 bon = { workspace = true }
