--- a/crates/unwrapped/Cargo.toml
+++ b/crates/unwrapped/Cargo.toml
@@ -4,11 +4,12 @@ description = """
     The unwrapped crate
 """
 readme = "README.md"
-version.workspace = true
 edition.workspace = true
 license.workspace = true
 publish.workspace = true
 repository.workspace = true
+rust-version.workspace = true
+version.workspace = true
 
 [dependencies]
 unwrapped-derive = { optional = true, workspace = true }
