--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,4 +58,4 @@ jobs:
         uses: rui314/setup-mold@v1
 
       - name: Lint code
-        run: cargo clippy --workspace --all-features --exclude cosmic-example -- -D warnings
+        run: cargo clippy --workspace --all-features
