--- a/crates/unwrapped/Cargo.toml
+++ b/crates/unwrapped/Cargo.toml
@@ -12,8 +12,9 @@ rust-version.workspace = true
 version.workspace = true
 
 [dependencies]
+bon = { workspace = true }
 unwrapped-derive = { optional = true, workspace = true }
 
 [features]
-default = [ "derive" ]
-derive = [ "dep:unwrapped-derive" ]
+default = ["derive"]
+derive = ["dep:unwrapped-derive"]
