--- a/crates/unwrapped-core/Cargo.toml
+++ b/crates/unwrapped-core/Cargo.toml
@@ -14,6 +14,7 @@ version.workspace = true
 [dependencies]
 bon = { workspace = true }
 darling = { workspace = true }
+ident_case = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true }
