--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,3 +59,17 @@ jobs:
 
       - name: Lint code
         run: cargo clippy --workspace --all-features
+
+  machete:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - uses: dtolnay/rust-toolchain@stable
+
+      - name: Install cargo-machete
+        run: cargo install --locked cargo-machete
+
+      - name: Run cargo-machete
+        run: cargo machete
