--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,10 +66,5 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - uses: dtolnay/rust-toolchain@stable
-
-      - name: Install cargo-machete
-        run: cargo install --locked cargo-machete
-
-      - name: Run cargo-machete
-        run: cargo machete
+      - name: Machete
+        uses: bnjbvr/cargo-machete@main
